Updated deploy config with new subdomain visionapplication.space and latest build

--- a/discloud.config
+++ b/discloud.config
@@ -1,6 +1,6 @@
 # Discloud configuration file placed in project root
 
-ID=bernardocv.discloud.app
+ID=visionapplication.space
 TYPE=site
 MAIN=index.html
 NAME=${DISCLOUD_NAME}
