Final update before completion

--- a/discloud.config
+++ b/discloud.config
@@ -1,6 +1,6 @@
 # Discloud configuration file placed in project root
 
-ID=visionapplication.space
+ID=visionapplication.discloud.app
 TYPE=site
 MAIN=index.html
 NAME=${DISCLOUD_NAME}
