Final update: readiness confirmation and simplified discloud config

--- a/discloud.config
+++ b/discloud.config
@@ -3,9 +3,9 @@
 ID=visionapplication.discloud.app
 TYPE=site
 MAIN=index.html
-NAME=${DISCLOUD_NAME}
-AVATAR=https://avatar.iran.liara.run/public/12.png
-RAM=${DISCLOUD_RAM}
+NAME=visionapplication
+AVATAR=
+RAM=512
 AUTORESTART=true
 START=npm run dev
 BUILD=npm run build
